# smart-einvoice-agent

./: .env.example  .gitignore  IMPLEMENTATION_TASKS.md  README.md  app.py  demo_graph.py  generate_rapport.py  pyproject.toml
agents/: __init__.py  accounting_classifier_agent.py  compliance_agent.py  extractor_agent.py  journal_entry_agent.py  reporter_agent.py  supervisor_agent.py
config/: llm.py  settings.py
data/sample_invoices/: facture_test_01.txt  facture_test_02.txt
graph/: __init__.py  invoice_graph.py  invoice_state.py  nodes.py
prompts/: classificateur_comptable.txt  conformite.txt  ecriture_comptable.txt  extracteur.txt  rapporteur.txt  superviseur.txt
rag/: ingest.py  rag_router_agent.py  vector_store.py
rag/corpora/normes_facturation_electronique/: ubl_facturx.txt
rag/corpora/plan_comptable_marocain/: pcm_classe6.txt  pcm_tva_fournisseurs.txt
rag/corpora/regles_fiscales_marocaines/: facturation_electronique.txt  tva_maroc.txt
schemas/: __init__.py  accounting_schema.py  compliance_schema.py  invoice_schema.py
tests/: test_accounting_classifier.py  test_agents_additional.py  test_compliance_agent.py  test_coverage_boost.py  test_extractor_agent.py  test_invoice_graph.py  test_rag_retrievers.py
tools/: __init__.py  accounting_plan_retriever_tool.py  einvoice_standards_retriever_tool.py  pdf_reader_tool.py  tax_rules_retriever_tool.py  xml_reader_tool.py
