[project]
name = "smart-einvoice-agent"
version = "1.0.0"
description = "Système intelligent de traitement et classification comptable des factures électroniques"
authors = [{ name = "Étudiant ENSET", email = "etudiant@enset.ma" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "faiss-cpu>=1.7.4",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pypdf>=4.2.0",
    "lxml>=5.2.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
ollama = [
    "langchain-ollama>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "graph", "tools", "rag", "config", "schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "data/*",
    "rag/indexes/*",
    "app.py",
    "rag/ingest.py",
    "graph/invoice_graph.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
    "raise NotImplementedError",
]
